re PR target/16819 (ICE with empty struct as arg)

gcc/ChangeLog:
PR target/16819
* calls.c (load_register_parameters): Don't call use_regs when
nregs is zero.
gcc/testsuite/ChangeLog:
PR target/16819
* gcc.dg/empty2.c: New.

From-SVN: r92568